added messaging on index html

--- a/Training Zone/index.html
+++ b/Training Zone/index.html
@@ -26,6 +26,9 @@
         </nav>
 
         <main>
+            <p>
+                Terrence Zonas – is an American computer scientist and Internet entrepreneur who co-founded Goggle, one of the world's most profitable Internet companies. However, his real passion and work is Training Zone where he likes to teach people things that make a difference.
+            </p>
         </main>
 
         <footer>
