--- a/Fitness Club/index.html
+++ b/Fitness Club/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
-<html>
-    <head> 
-        <title>My home page</title>
+<!-- This website template was created by: Jack Kelly -->
+<html lang = "en">
+    <head>
+        <title>
+            Forward Fitness Club
+        </title>
+        <meta charset = "utf-8">
     </head>
     <body>
-        <h1>My name is Jack</h1>
-        <img src="pizza_small.jpg" alt="Pizza Time">
-        <p>I am a very interesting person. I like to relax. I am not well known.</p>
+        <!-- Use the header area for the website name or logo -->
+        <header>
+            <h1>
+                Forward Fitness Club
+            </h1>
+
+            <img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo" height="220" width="297">
+
+        </header>
+
+        <nav>
+            <p>
+                Home &#9475; &nbsp;
+                About Us &#9475; &nbsp;
+                Classes &#9475; &nbsp;
+                Nutrition &#9475; &nbsp;
+                Contact Us
+            </p>
+        </nav>
+
+        <main>
+            <p>
+                Welcome to Forward Fitness Club. Our mission is to help our clients meet their fitness and nutrition goals.
+            </p>
+
+            <p>
+                If you have struggled with getting healthy and need the motivation and resources to make a healthy lifestyle change, contact us today. Our facility includes state-of-the-art equipment, convenient group training classes, and nutrition tips and information to keep you healthy.
+            </p>
+
+            <p>
+                We provide a FREE one-week membership so you can experience the benefits of our equipment and facility. This one-week trial gives you complete access to our equipment, training classes, and nutrition planning. Contact us today to start your free trial!
+            </p>
+            
+        </main>
+
+        <footer>
+            <p>
+                &copy; Copyright 2022. All Rights Reserved.
+            </p>
+            <p>
+                forwardfitness@club.net
+            </p>
+        </footer>
     </body>
 </html>
