--- a/Fitness Club/fitness/index.html
+++ b/Fitness Club/fitness/index.html
@@ -17,7 +17,7 @@
                     Forward Fitness Club
                 </h1>
 
-                <img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo" height="220" width="297">
+                <a href="index.html"> <img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo" height="220" width="297"> </a>
 
             </header>
 
@@ -32,24 +32,26 @@
             </nav>
 
             <main>
-                <p>
-                    Welcome to Forward Fitness Club. Our mission is to help our clients meet their fitness and nutrition goals.
-                </p>
+                <div id = "intro">
+                    <p>
+                        Welcome to Forward Fitness Club. Our mission is to help our clients meet their fitness and nutrition goals.
+                    </p>
 
-                <p>
-                    If you have struggled with getting healthy and need the motivation and resources to make a healthy lifestyle change, contact us today. Our facility includes state-of-the-art equipment, convenient group training classes, and nutrition tips and information to keep you healthy.
-                </p>
+                    <p>
+                        If you have struggled with getting healthy and need the motivation and resources to make a healthy lifestyle change, contact us today. Our facility includes state-of-the-art equipment, convenient group training classes, and nutrition tips and information to keep you healthy.
+                    </p>
 
-                <p>
-                    We provide a FREE one-week membership so you can experience the benefits of our equipment and facility. This one-week trial gives you complete access to our equipment, training classes, and nutrition planning. Contact us today to start your free trial!
-                </p>
+                    <p>
+                        We provide a FREE one-week membership so you can experience the benefits of our equipment and facility. This one-week trial gives you complete access to our equipment, training classes, and nutrition planning. Contact us today to start your free trial!
+                    </p>
+                </div>
             </main>
 
             <footer>
                 <p>
                     &copy; Copyright 2022. All Rights Reserved.
                 </p>
-                
+
                 <p>
                     forwardfitness@club.net
                 </p>
