created new pages and added links to file(s)

--- a/Fitness Club/fitness/index.html
+++ b/Fitness Club/fitness/index.html
@@ -23,11 +23,11 @@
 
             <nav>
                 <p>
-                    Home &#9475; &nbsp;
-                    About Us &#9475; &nbsp;
-                    Classes &#9475; &nbsp;
-                    Nutrition &#9475; &nbsp;
-                    Contact Us
+                    <a href="index.html">Home</a>&#9475; &nbsp;
+                    <a href="about.html">About Us</a> &#9475; &nbsp;
+                    <a href="classes.html">Classes</a> &#9475; &nbsp;
+                    <a href="nutrition.html">Nutrition</a> &#9475; &nbsp;
+                    <a href="contact.html">Contact Us</a>
                 </p>
             </nav>
 
@@ -53,7 +53,7 @@
                 </p>
 
                 <p>
-                    forwardfitness@club.net
+                    <a href = "mailto: forwardfitness@club.net"></a>
                 </p>
             </footer>
         </div>
