--- a/Fitness Club/template.html
+++ b/Fitness Club/template.html
@@ -52,7 +52,7 @@
                 </p>
 
                 <p>
-                    forwardfitness@club.net
+                    <a href = "mailto: forwardfitness@club.net"></a>
                 </p>
             </footer>
 
