fixed about page and email link

--- a/Fitness Club/about.html
+++ b/Fitness Club/about.html
@@ -46,6 +46,36 @@
                         <li>Barbells</li>
                     </ul>
                 </div>
+
+                <div id = "cardio">
+                    <h1>
+                        Cardio
+                    </h1>
+
+                    <img class = "equip" src = "images/people-workingout-machines.jpg" alt = "Cardio Equipment" height = "300" width = "450">
+
+                    <p>Burn fat through cardio workouts. Experts recommend 150 minutes of cardio each week. We have several equipment choices for your workout.</p>
+
+                    <ul>
+                        <li>Treadmills</li>
+                        <li>Elliptical Machines</li>
+                        <li>Exercise Bikes</li>
+                    </ul>
+                </div>
+
+                <div id="training">
+                    <h1>Personal Training</h1>
+
+                    <img class="equip" src="images/personal-trainer.jpg" alt="Personal Training" height="300" width="450">
+
+                    <p> Our certified personal trainers work with you to help you obtain your fitness goals and track your progress. Personal training has many benefits.</p>
+
+                    <ul>
+                        <li>Accountability</li>
+                        <li>Personalised Program</li>
+                        <li>Consistent Support and Motivation</li>
+                    </ul>
+                </div>
             </main>
 
             <footer>
@@ -54,40 +84,12 @@
                 </p>
 
                 <p>
-                    <a href = "mailto: forwardfitness@club.net"></a>
+                    <a href = "mailto: forwardfitness@club.net">forwardfitness@club.net</a>
                 </p>
             </footer>
 
         </div>
 
-        <div id = "cardio">
-            <h1>
-                Cardio
-            </h1>
-
-            <img class = "equip" src = "images/people-workingout-machines.jpg" alt = "Cardio Equipment" height = "300" width = "450">
-
-            <p>Burn fat through cardio workouts. Experts recommend 150 minutes of cardio each week. We have several equipment choices for your workout.</p>
-
-            <ul>
-                <li>Treadmills</li>
-                <li>Elliptical Machines</li>
-                <li>Exercise Bikes</li>
-            </ul>
-        </div>
-
-        <div id="training">
-            <h1>Personal Training</h1>
-
-            <img class="equip" src="images/personal-trainer.jpg" alt="Personal Training" height="300" width="450">
-
-            <p> Our certified personal trainers work with you to help you obtain your fitness goals and track your progress. Personal training has many benefits.</p>
-
-            <ul>
-                <li>Accountability</li>
-                <li>Personalised Program</li>
-                <li>Consistent Support and Motivation</li>
-            </ul>
-            </div>
+        
     </body>
 </html>
