--- a/Fitness Club/template.html
+++ b/Fitness Club/template.html
@@ -52,7 +52,7 @@
                 </p>
 
                 <p>
-                    <a href = "mailto: forwardfitness@club.net"></a>
+                    <a href = "mailto: forwardfitness@club.net">forwardfitness@club.net</a>
                 </p>
             </footer>
 
