--- a/Fitness Club/index.html
+++ b/Fitness Club/index.html
@@ -53,7 +53,7 @@
                 </p>
 
                 <p>
-                    <a href = "mailto: forwardfitness@club.net"></a>
+                    <a href = "mailto: forwardfitness@club.net">forwardfitness@club.net</a>
                 </p>
             </footer>
         </div>
