--- a/Fitness Club/about.html
+++ b/Fitness Club/about.html
@@ -76,6 +76,26 @@
                         <li>Consistent Support and Motivation</li>
                     </ul>
                 </div>
+
+                <div id = "exercises">
+                    <h1>Common Exercises</h1>
+
+                    <dl>
+                        <dt>Burpee</dt>
+
+                        <dd>Burpees are a great full-body exercise to increase your strength and endurance. Begin in a standing position, drop into a squat and extend your hands forward, kick your feet back and then forward again quickly, and then jump up from a squatted position. </dd>
+
+                        <dt>Plank</dt>
+
+                        <dd>Planks build your core strength. To perform a plank, get in a push-up position and rest your forearms on the floor. Hold the position as long as you can. </dd>
+
+                        <dt>Mountain Climber</dt>
+
+                        <dd>Mountain climbers are a good cardio exercise. Place your hands on the floor in a push-up position, bring one knee up to your chest, and then switch as quickly as you can (as though you are climbing a mountain).</dd>
+                    </dl>
+
+                    <p>For more information about how to stay active, visit the <a href="https://www.hhs.gov/fitness/be-active/index.html" target="_blank">U.S. Department of Health and Human Services</a>.</p>
+                </div>
             </main>
 
             <footer>
