added all TZ files needed

--- a/Training Zone/template.html
+++ b/Training Zone/template.html
@@ -13,15 +13,17 @@
             <h1>
                 Training Zone
             </h1>
+
+            <a href="home.html"> <img src="images/trainingzone_logo.jpg" alt="Training Zone Logo" height="258" width="345"> </a>
         </header>
 
         <nav>
             <p>
-                Home &#9475; &nbsp;
-                About Us &#9475; &nbsp;
-                Classes &#9475; &nbsp;
-                Nutrition &#9475; &nbsp;
-                Contact Us
+                <a href="home.html">Home</a>&#9475; &nbsp;
+                <a href="team.html">Meet Our Team</a> &#9475; &nbsp;
+                <a href="training.html">Training</a> &#9475; &nbsp;
+                <a href="history.html">History</a> &#9475; &nbsp;
+                <a href="sign.html">Sign Up</a>
             </p>
         </nav>
 
@@ -33,7 +35,7 @@
                 &copy; Copyright 2022. All Rights Reserved.
             </p>
             <p>
-                training@trainingzone.com.au
+                <a href = "mailto: training@trainingzone.com.au">training@trainingzone.com.au</a>
             </p>
             <p>
                 (07) 4779 1243
