--- a/Training Zone/home.html
+++ b/Training Zone/home.html
@@ -9,44 +9,58 @@
     </head>
     
     <body>
-        <!-- Use the header area for the website name or logo -->
-        <header>
-            <h1>
-                Training Zone
-            </h1>
+        <div id = "container">
+            <!-- Use the header area for the website name or logo -->
+            <header>
+                <h1>
+                    Training Zone
+                </h1>
 
-            <a href="home.html"> <img src="images/trainingzone_logo.jpg" alt="Training Zone Logo" height="258" width="345"> </a>
-        </header>
+                <a href="home.html"> <img src="images/trainingzone_logo.jpg" alt="Training Zone Logo" height="258" width="345"> </a>
+            </header>
 
-        <nav>
-            <p>
-                <a href="home.html">Home</a>&#9475; &nbsp;
-                <a href="team.html">Meet Our Team</a> &#9475; &nbsp;
-                <a href="training.html">Training</a> &#9475; &nbsp;
-                <a href="history.html">History</a> &#9475; &nbsp;
-                <a href="sign.html">Sign Up</a>
-            </p>
-        </nav>
+            <nav>
+                <p>
+                    <a href="home.html">Home</a>&#9475; &nbsp;
+                    <a href="team.html">Meet Our Team</a> &#9475; &nbsp;
+                    <a href="training.html">Training</a> &#9475; &nbsp;
+                    <a href="history.html">History</a> &#9475; &nbsp;
+                    <a href="sign.html">Sign Up</a>
+                </p>
+            </nav>
 
-        <main>
-            <p>
-                Terrence Zonas – is an American computer scientist and Internet entrepreneur who co-founded Goggle, one of the world's most profitable Internet companies. However, his real passion and work is Training Zone where he likes to teach people things that make a difference.
-            </p>
-        </main>
+            <main>
+                <div id = "opener">
+                    <h1>Your real, in person solution!</h1>
 
-        <footer>
-            <p>
-                &copy; Copyright 2022. All Rights Reserved.
-            </p>
-            <p>
-                <a href = "mailto: training@trainingzone.com.au">training@trainingzone.com.au</a>
-            </p>
-            <p>
-                (07) 4779 1243
-            </p>
-            <p>
-                12 Plongk St, Cairnsville, Queensland
-            </p>
-        </footer>
+
+
+                    <p>
+                        We here at Training Zone take pride in our ability to provide insdustry leading business and IT educaton. With local and distant customers, TZ
+                        has tirelessly enabled face to face and sourced teachings that give YOU the skills you ned for your professional development. <a href="team.html">Our team</a>
+                         is ready to take on any assignment and help our registered users' with any and all aid required, and our <a href="history.html">history</a> proves this. 
+                    </p>
+
+                    <p>
+                        <a href="sign.html">Register here</a> to access our first class training exercises, or check out an <a href="training.html">example</a> of what we provide!
+                    </p>
+                </div>
+            </main>
+
+            <footer>
+                <p>
+                    &copy; Copyright 2022. All Rights Reserved.
+                </p>
+                <p>
+                    <a href = "mailto: training@trainingzone.com.au">training@trainingzone.com.au</a>
+                </p>
+                <p>
+                    (07) 4779 1243
+                </p>
+                <p>
+                    12 Plongk St, Cairnsville, Queensland
+                </p>
+            </footer>
+        </div>
     </body>
 </html>
