--- a/Training Zone/team.html
+++ b/Training Zone/team.html
@@ -36,7 +36,7 @@
                     <img src = "images/happy_group.jpg" alt = "Training Zone Team" height = "768" width = "1024">
 
                     <p>
-                        Our team includes world leading trainers, who have helped more then 60 thousand Cairnsvillians achieve their business and IT education. Sign up, and learn from the leaders in tech, including:
+                        Our team includes world leading trainers, who have helped more then 60 thousand Cairnsvillians achieve their business and IT education. <a href = "sign.html">Sign up</a>, and learn from the leaders in tech, including:
                     </p>
 
                     <ul>
@@ -69,6 +69,10 @@ longevity.
                                 </li>
                             </ul>
                     </ul>
+
+                    <p>
+                        You too, can pick the brains of our world class trainers' by <a href="sign.html">registering here</a>.
+                    </p>
                 </div>
             </main>
 
