--- a/Training Zone/template.html
+++ b/Training Zone/template.html
@@ -7,43 +7,45 @@
         </title>
         <meta charset = "utf8">
     </head>
-    
+
     <body>
-        <!-- Use the header area for the website name or logo -->
-        <header>
-            <h1>
-                Training Zone
-            </h1>
+        <div id = "container">
+            <!-- Use the header area for the website name or logo -->
+            <header>
+                <h1>
+                    Training Zone
+                </h1>
 
-            <a href="home.html"> <img src="images/trainingzone_logo.jpg" alt="Training Zone Logo" height="258" width="345"> </a>
-        </header>
+                <a href="home.html"> <img src="images/trainingzone_logo.jpg" alt="Training Zone Logo" height="258" width="345"> </a>
+            </header>
 
-        <nav>
-            <p>
-                <a href="home.html">Home</a>&#9475; &nbsp;
-                <a href="team.html">Meet Our Team</a> &#9475; &nbsp;
-                <a href="training.html">Training</a> &#9475; &nbsp;
-                <a href="history.html">History</a> &#9475; &nbsp;
-                <a href="sign.html">Sign Up</a>
-            </p>
-        </nav>
+            <nav>
+                <p>
+                    <a href="home.html">Home</a>&#9475; &nbsp;
+                    <a href="team.html">Meet Our Team</a> &#9475; &nbsp;
+                    <a href="training.html">Training</a> &#9475; &nbsp;
+                    <a href="history.html">History</a> &#9475; &nbsp;
+                    <a href="sign.html">Sign Up</a>
+                </p>
+            </nav>
 
-        <main>
-        </main>
+            <main>
+            </main>
 
-        <footer>
-            <p>
-                &copy; Copyright 2022. All Rights Reserved.
-            </p>
-            <p>
-                <a href = "mailto: training@trainingzone.com.au">training@trainingzone.com.au</a>
-            </p>
-            <p>
-                (07) 4779 1243
-            </p>
-            <p>
-                12 Plongk St, Cairnsville, Queensland
-            </p>
-        </footer>
+            <footer>
+                <p>
+                    &copy; Copyright 2022. All Rights Reserved.
+                </p>
+                <p>
+                    <a href = "mailto: training@trainingzone.com.au">training@trainingzone.com.au</a>
+                </p>
+                <p>
+                    (07) 4779 1243
+                </p>
+                <p>
+                    12 Plongk St, Cairnsville, Queensland
+                </p>
+            </footer>
+        </div>
     </body>
 </html>
