--- a/Training Zone/home.html
+++ b/Training Zone/home.html
@@ -36,9 +36,11 @@
 
 
                     <p>
-                        We here at Training Zone take pride in our ability to provide insdustry leading business and IT educaton. With local and distant customers, TZ
-                        has tirelessly enabled face to face and sourced teachings that give YOU the skills you ned for your professional development. <a href="team.html">Our team</a>
-                         is ready to take on any assignment and help our registered users' with any and all aid required, and our <a href="history.html">history</a> proves this. 
+                        We here at Training Zone take pride in our ability to provide insdustry leading business and IT educaton. 
+                        With local and distant customers, TZ has tirelessly enabled face to face and sourced teachings that give 
+                        YOU the skills you ned for your professional development. <a href="team.html">Our team</a>
+                         is ready to take on any assignment and help our registered users' with any and all aid required, and 
+                         our <a href="history.html">history</a> proves this. 
                     </p>
 
                     <p>
