--- a/Training Zone/home.html
+++ b/Training Zone/home.html
@@ -33,8 +33,6 @@
                 <div id = "opener">
                     <h1>Your real, in person solution!</h1>
 
-
-
                     <p>
                         We here at Training Zone take pride in our ability to provide insdustry leading business and IT educaton. 
                         With local and distant customers, TZ has tirelessly enabled face to face and sourced teachings that give 
@@ -42,6 +40,8 @@
                          is ready to take on any assignment and help our registered users' with any and all aid required, and 
                          our <a href="history.html">history</a> proves this. 
                     </p>
+
+                    <a href="training.html"> <img src="images/in_person_training.jpg" alt="In person training" height="258" width="345"> </a>
 
                     <p>
                         <a href="sign.html">Register here</a> to access our first class training exercises, or check out an <a href="training.html">example</a> of what we provide!
