--- a/Training Zone/training.html
+++ b/Training Zone/training.html
@@ -33,6 +33,8 @@
                 <div id = "training example">
                     <h1>Training in THE ZONE</h1>
 
+                    <img src = "images/group_training.jpg" alt = "Group Training" height="258" width="345">
+
                     <p>
                         Here at TZ, we provide on site, and external training... but what does that actually look like?
                         To find out yourself, you can <a href="sign.html">sign up here</a>, or read an exemplar backed by our renowned team:
