goal and succ eval done

--- a/Assignment/plan.html
+++ b/Assignment/plan.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Assessment 2  Project Plan for ?Student Name?</title>
+  <title>Assessment 2  Project Plan for Jack Kelly</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <style>
     body {
@@ -24,11 +24,19 @@
 
 <body>
   <h1>CP1406/CP5638 - Assessment 2  - Project Plan</h1>
-  <p><strong>Name:</strong> ...</p>
+  <p><strong>Name:</strong> Jack Kelly</p>
   <h2>Goal</h2>
-  <p>...</p>
+  <p>
+    The goal of Vcare's new website, is to achieve more eye tests and bookings for Vcare Opticals, specifically through the sites integration of information about the practice and it's services, and pushed by a modern appearance.
+    This would be aided through the announcements mentioned in the intro email which specifies discounts under certain conditions, something that is sure to bring people in, as well as information that encourages eye check-ups take place for potential customers' health.
+    These types of logos will persuade people to come in, or book appointment, hopefully giving a measurable increase in customers for Vcare.
+  </p>
   <h2>Success Evaluation</h2>
-  <p> ...</p>
+  <p>
+    We would know this goal has been achieved by more and more people booking through email, and the website. This would be seen particularly with the first mention of booking through email, as the website in particular would mention that this would come with a discount,
+    as mentioned in the intro email. Aside from this, a high number of bookings through the website, potentially leading to more than before, would be a clear indicator that the website was working, and was bringing in more customers, as opposed to just measuring hits to
+    the site, or bookings overall, which may just be coincidence.
+  </p>
   <h2>Target Audience</h2>
   <p>...</p>
   <h2>Site Flowchart</h2>
