--- a/Fitness Club/index.html
+++ b/Fitness Club/index.html
@@ -7,6 +7,8 @@
         </title>
 
         <meta charset = "utf-8">
+
+        <link rel = "stylesheet" href="css/style.css">
     </head>
 
     <body>
@@ -22,13 +24,13 @@
             </header>
 
             <nav>
-                <p>
-                    <a href="index.html">Home</a>&#9475; &nbsp;
-                    <a href="about.html">About Us</a> &#9475; &nbsp;
-                    <a href="classes.html">Classes</a> &#9475; &nbsp;
-                    <a href="nutrition.html">Nutrition</a> &#9475; &nbsp;
-                    <a href="contact.html">Contact Us</a>
-                </p>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="classes.html">Classes</a></li>
+                    <li><a href="nutrition.html">Nutrition</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
             </nav>
 
             <main>
