completed TZ content for prac

--- a/Fitness Club/contact.html
+++ b/Fitness Club/contact.html
@@ -7,17 +7,15 @@
         </title>
 
         <meta charset = "utf8">
+
+        <link rel = "stylesheet" href="css/style.css">
     </head>
 
     <body>
         <div id = "container">
             <!-- Use the header area for the website name or logo -->
             <header>
-                <h1>
-                    Forward Fitness Club
-                </h1>
-
-                <a href="index.html"> <img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo" height="220" width="297"> </a>
+                <a href="index.html"> <img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo"> </a>
             </header>
 
             <nav>
