--- a/Fitness Club/about.html
+++ b/Fitness Club/about.html
@@ -7,17 +7,16 @@
         </title>
 
         <meta charset = "utf8">
+
+        <link rel = "stylesheet" href="css/style.css">
     </head>
 
     <body>
         <div id = "container">
             <!-- Use the header area for the website name or logo -->
             <header>
-                <h1>
-                    Forward Fitness Club
-                </h1>
-
-                <a href="index.html"> <img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo" height="220" width="297"> </a>
+                
+                <a href="index.html"> <img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo"> </a>
             </header>
 
             <nav>
@@ -34,7 +33,7 @@
                 <div id="weights">
                     <h1>Weights</h1>
 
-                    <img src="images/people-with-weights.jpg" alt="Two people working out with a weight in each hand" height="300" width="450">
+                    <img src="images/people-with-weights.jpg" alt="Two people working out with a weight in each hand">
 
                     <p>
                         Our facility includes a weight training area with several weight options. Build lean muscle with weights and improve your core with weight training.
@@ -52,7 +51,7 @@
                         Cardio
                     </h1>
 
-                    <img class = "equip" src = "images/people-workingout-machines.jpg" alt = "Cardio Equipment" height = "300" width = "450">
+                    <img class = "equip" src = "images/people-workingout-machines.jpg" alt = "Cardio Equipment">
 
                     <p>Burn fat through cardio workouts. Experts recommend 150 minutes of cardio each week. We have several equipment choices for your workout.</p>
 
@@ -66,7 +65,7 @@
                 <div id="training">
                     <h1>Personal Training</h1>
 
-                    <img class="equip" src="images/personal-trainer.jpg" alt="Personal Training" height="300" width="450">
+                    <img class="equip" src="images/personal-trainer.jpg" alt="Personal Training">
 
                     <p> Our certified personal trainers work with you to help you obtain your fitness goals and track your progress. Personal training has many benefits.</p>
 
