--- a/Fitness Club/index.html
+++ b/Fitness Club/index.html
@@ -15,12 +15,7 @@
         <div id = "container">
             <!-- Use the header area for the website name or logo -->
             <header>
-                <h1>
-                    Forward Fitness Club
-                </h1>
-
-                <a href="index.html"> <img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo" height="220" width="297"> </a>
-
+                <a href="index.html"> <img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo"> </a>
             </header>
 
             <nav>
@@ -33,6 +28,11 @@
                 </ul>
             </nav>
 
+            <!--Hero Image-->
+            <div id = "hero">
+                <img src = "images/hero-image.jpg" alt = "left arm extended holding a weight">
+            </div>
+
             <main>
                 <div id = "intro">
                     <p>
@@ -44,7 +44,7 @@
                     </p>
 
                     <p>
-                        We provide a FREE one-week membership so you can experience the benefits of our equipment and facility. This one-week trial gives you complete access to our equipment, training classes, and nutrition planning. Contact us today to start your free trial!
+                        We provide a FREE one-week membership so you can experience the benefits of our equipment and facility. This one-week trial gives you complete access to our equipment, training classes, and nutrition planning. Contact us today to <span class="action">start your free trial!</span>
                     </p>
                 </div>
             </main>
