FINISHED work on tz post prac 4

--- a/Training Zone/history.html
+++ b/Training Zone/history.html
@@ -2,38 +2,35 @@
 <!-- This website template was created by: Jack Kelly -->
 <html lang = "en">
     <head>
-        <title>
-            Training Zone
-        </title>
         <meta charset = "utf8">
+
+        <link rel = "stylesheet" href="css/style.css">
     </head>
 
     <body>
         <div id = "container">
             <!-- Use the header area for the website name or logo -->
             <header>
-                <h1>
-                    Training Zone
-                </h1>
-
-                <a href="home.html"> <img src="images/trainingzone_logo.jpg" alt="Training Zone Logo" height="258" width="345"> </a>
+                <a href="home.html"> <img src="images/trainingzone_logo.jpg" alt="Training Zone Logo"> </a>
             </header>
 
             <nav>
-                <p>
-                    <a href="home.html">Home</a>&#9475; &nbsp;
-                    <a href="team.html">Meet Our Team</a> &#9475; &nbsp;
-                    <a href="training.html">Training</a> &#9475; &nbsp;
-                    <a href="history.html">History</a> &#9475; &nbsp;
-                    <a href="sign.html">Sign Up</a>
-                </p>
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="team.html">Meet Our Team</a></li> 
+                    <li><a href="training.html">Training</a> </li>
+                    <li><a href="history.html">History</a> </li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
             </nav>
 
             <main>
                 <div id = "history">
                     <h1>Our History</h1>
 
-                    <img src="images/board_room.jpg" alt="Empty board room" height="258" width="345">
+                    <div id = "historyimage1">
+                        <img src="images/in_person_training.jpg" alt="Woman Teaching someone on a computer" >
+                    </div>
 
                     <p>
                         Training Zone have been the leader in all kinds of training that covers management
