--- a/Training Zone/home.html
+++ b/Training Zone/home.html
@@ -5,29 +5,32 @@
         <title>
             Training Zone
         </title>
+
         <meta charset = "utf8">
+
+        <link rel = "stylesheet" href="css/style.css">
     </head>
     
     <body>
         <div id = "container">
             <!-- Use the header area for the website name or logo -->
             <header>
-                <h1>
-                    Training Zone
-                </h1>
-
-                <a href="home.html"> <img src="images/trainingzone_logo.jpg" alt="Training Zone Logo" height="258" width="345"> </a>
+                <a href="home.html"> <img src="images/trainingzone_logo.jpg" alt="Training Zone Logo"> </a>
             </header>
 
             <nav>
-                <p>
-                    <a href="home.html">Home</a>&#9475; &nbsp;
-                    <a href="team.html">Meet Our Team</a> &#9475; &nbsp;
-                    <a href="training.html">Training</a> &#9475; &nbsp;
-                    <a href="history.html">History</a> &#9475; &nbsp;
-                    <a href="sign.html">Sign Up</a>
-                </p>
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="team.html">Meet Our Team</a></li> 
+                    <li><a href="training.html">Training</a> </li>
+                    <li><a href="history.html">History</a> </li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
             </nav>
+
+            <div id = "hero">
+                <img src="images/group_training.jpg" alt="People being trained in a group">
+            </div>
 
             <main>
                 <div id = "opener">
@@ -40,8 +43,6 @@
                          is ready to take on any assignment and help our registered users' with any and all aid required, and 
                          our <a href="history.html">history</a> proves this. 
                     </p>
-
-                    <a href="training.html"> <img src="images/in_person_training.jpg" alt="In person training" height="258" width="345"> </a>
 
                     <p>
                         <a href="sign.html">Register here</a> to access our first class training exercises, or check out an <a href="training.html">example</a> of what we provide!
