--- a/Training Zone/team.html
+++ b/Training Zone/team.html
@@ -2,74 +2,65 @@
 <!-- This website template was created by: Jack Kelly -->
 <html lang = "en">
     <head>
-        <title>
-            Training Zone
-        </title>
         <meta charset = "utf8">
+
+        <link rel = "stylesheet" href="css/style.css">
     </head>
 
     <body>
         <div id = "container">
             <!-- Use the header area for the website name or logo -->
             <header>
-                <h1>
-                    Training Zone
-                </h1>
-
-                <a href="home.html"> <img src="images/trainingzone_logo.jpg" alt="Training Zone Logo" height="258" width="345"> </a>
+                <a href="home.html"> <img src="images/trainingzone_logo.jpg" alt="Training Zone Logo"> </a>
             </header>
 
             <nav>
-                <p>
-                    <a href="home.html">Home</a>&#9475; &nbsp;
-                    <a href="team.html">Meet Our Team</a> &#9475; &nbsp;
-                    <a href="training.html">Training</a> &#9475; &nbsp;
-                    <a href="history.html">History</a> &#9475; &nbsp;
-                    <a href="sign.html">Sign Up</a>
-                </p>
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="team.html">Meet Our Team</a></li> 
+                    <li><a href="training.html">Training</a> </li>
+                    <li><a href="history.html">History</a> </li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
             </nav>
 
             <main>
                 <div id = "team">
                     <h1>Meet Our Team!</h1>
 
-                    <img src = "images/happy_group.jpg" alt = "Training Zone Team" height = "768" width = "1024">
+                    <img src = "images/happy_group.jpg" alt = "Training Zone Team">
 
                     <p>
                         Our team includes world leading trainers, who have helped more then 60 thousand Cairnsvillians achieve their business 
                         and IT education. <a href = "sign.html">Sign up</a>, and learn from the leaders in tech, including:
                     </p>
 
-                    <ul>
-                        <li>Terrance Zonas</li>
-                            <ul>
-                                <li>
-                                    An American computer scientist and Internet entrepreneur who co-founded
+                    <dl>
+                        <dd>Terrance Zonas</dd>
+                            <dt>
+                                An American computer scientist and Internet entrepreneur who co-founded
 Goggle, one of the world's most profitable Internet companies. However, his real passion and work is
 Training Zone where he likes to teach people things that make a difference.
-                                </li>
-                            </ul>
-                        <li>Stafford Gray</li>
-                            <ul>
-                                <li>
-                                    Stafford is a senior Information Technology trainer. His primary research area is
+                            </dt>
+                            <dt>&nbsp;</dt>
+                        <dd>Stafford Gray</dd>
+                            <dt>
+                                Stafford is a senior Information Technology trainer. His primary research area is
 Cryptography. More precisely, Society-Oriented and/or Threshold Cryptography. Currently his principal
 research themes are: Multi-Party Computations, Oblivious Transfers, and Secret Sharing Schemes. He
 teaches a wide range of topics in Computer Science such as, Operating Systems, Data Structures,
 Algorithms & Complexity, Information Security, Cryptography, Databases and Data Mining.
-                                </li>
-                            </ul>
-                        <li>Adrienne Michowski</li>
-                            <ul>
-                                <li>
-                                    An English mathematician and writer, chiefly known for her work on Charles
+                            </dt>
+                            <dt>&nbsp;</dt>
+                        <dd>Adrienne Michowski</dd>
+                            <dt>
+                                An English mathematician and writer, chiefly known for her work on Charles
 Babbage's early mechanical general-purpose computer, the Analytical Engine. Her notes on the engine
 include what is recognised as the first algorithm intended to be carried out by a machine. Because of
 this, she is often regarded as the first computer programmer. She trains clients in programming and
 longevity.
-                                </li>
-                            </ul>
-                    </ul>
+                            </dt>
+                        </dl>
 
                     <p>
                         You too, can pick the brains of our world class trainers' by <a href="sign.html">registering here</a>.
