--- a/Training Zone/contact.html
+++ b/Training Zone/contact.html
@@ -25,6 +25,13 @@
             </nav>
 
             <main>
+                <h1>Advance your career with us now!</h1>
+
+                <h2>Call us with: (07) 4779 1243</h2>
+
+                <h2>Email us: <a href = "mailto: training@trainingzone.com.au">training@trainingzone.com.au</a></h2>
+
+                <h2>Or come see us at 12 Plongk St, Cairnsville, Queensland</h2>
             </main>
 
             <footer>
