--- a/Training Zone/training.html
+++ b/Training Zone/training.html
@@ -1,46 +1,39 @@
 <!DOCTYPE html>
 <!-- This website template was created by: Jack Kelly -->
 <html lang = "en">
-    <head>
-        <title>
-            Training Zone
-        </title>
         <meta charset = "utf8">
+
+        <link rel = "stylesheet" href="css/style.css">
     </head>
 
     <body>
         <div id = "container">
             <!-- Use the header area for the website name or logo -->
             <header>
-                <h1>
-                    Training Zone
-                </h1>
-
-                <a href="home.html"> <img src="images/trainingzone_logo.jpg" alt="Training Zone Logo" height="258" width="345"> </a>
+                <a href="home.html"> <img src="images/trainingzone_logo.jpg" alt="Training Zone Logo"> </a>
             </header>
 
             <nav>
-                <p>
-                    <a href="home.html">Home</a>&#9475; &nbsp;
-                    <a href="team.html">Meet Our Team</a> &#9475; &nbsp;
-                    <a href="training.html">Training</a> &#9475; &nbsp;
-                    <a href="history.html">History</a> &#9475; &nbsp;
-                    <a href="sign.html">Sign Up</a>
-                </p>
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="team.html">Meet Our Team</a></li> 
+                    <li><a href="training.html">Training</a> </li>
+                    <li><a href="history.html">History</a> </li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
             </nav>
 
             <main>
                 <div id = "training example">
                     <h1>Training in THE ZONE</h1>
 
-                    <img src = "images/group_training.jpg" alt = "Group Training" height="258" width="345">
+                    <h2>Here at TZ, we provide on site, and external training! But what does that actually look like? Hopefully not like this...</h2>
 
-                    <p>
-                        Here at TZ, we provide on site, and external training... but what does that actually look like?
-                        To find out yourself, you can <a href="sign.html">sign up here</a>, or read an exemplar backed by our renowned team:
-                    </p>
+                    <img src = "images/board_room.jpg" alt = "Group Training">
+
+                    <h2>To find out about our advanced training for yourself, you can <a href="contact.html">contact us</a>, and read an exemplar backed by our renowned team:</h2> 
                     
-                    <h2>What IS The Point Of Performance Appraisal</h2>
+                    <h1>What is THE POINT Of Performance Appraisal</h1>
 
                     <p>
                         Probably the most misused and abused and disused management tool in history is the performance
