--- a/Fitness Club/about.html
+++ b/Fitness Club/about.html
@@ -7,6 +7,8 @@
         </title>
 
         <meta charset = "utf8">
+        
+        <meta name = "viewport" content = "width=device-width, intial-scale=1">
 
         <link rel = "stylesheet" href="css/style.css">
     </head>
