--- a/Fitness Club/contact.html
+++ b/Fitness Club/contact.html
@@ -8,6 +8,8 @@
 
         <meta charset = "utf8">
 
+        <meta name = "viewport" content = "width=device-width, intial-scale=1">
+        
         <link rel = "stylesheet" href="css/style.css">
     </head>
 
