--- a/Fitness Club/about.html
+++ b/Fitness Club/about.html
@@ -39,13 +39,13 @@
                 <div id="weights">
                     <h1>Weights</h1>
 
-                    <img src="images/people-with-weights.jpg" alt="Two people working out with a weight in each hand">
+                    <img src="images/people-with-weights.jpg" alt="Two people working out with a weight in each hand" class = "round">
 
                     <p>
                         Our facility includes a weight training area with several weight options. Build lean muscle with weights and improve your core with weight training.
                     </p>
 
-                    <ul>
+                    <ul class = "tablet-desktop">
                         <li>Dumbbells</li>
                         <li>Kettle Bells</li>
                         <li>Barbells</li>
@@ -57,11 +57,11 @@
                         Cardio
                     </h1>
 
-                    <img class = "equip" src = "images/people-workingout-machines.jpg" alt = "Cardio Equipment">
+                    <img class = "equip" src = "images/people-workingout-machines.jpg" alt = "Cardio Equipment" class = "round">
 
                     <p>Burn fat through cardio workouts. Experts recommend 150 minutes of cardio each week. We have several equipment choices for your workout.</p>
 
-                    <ul>
+                    <ul class = "tablet-desktop">
                         <li>Treadmills</li>
                         <li>Elliptical Machines</li>
                         <li>Exercise Bikes</li>
@@ -71,11 +71,11 @@
                 <div id="training">
                     <h1>Personal Training</h1>
 
-                    <img class="equip" src="images/personal-trainer.jpg" alt="Personal Training">
+                    <img class="equip" src="images/personal-trainer.jpg" alt="Personal Training" class = "round">
 
                     <p> Our certified personal trainers work with you to help you obtain your fitness goals and track your progress. Personal training has many benefits.</p>
 
-                    <ul>
+                    <ul class = "tablet-desktop">
                         <li>Accountability</li>
                         <li>Personalised Program</li>
                         <li>Consistent Support and Motivation</li>
